--- a/laptopguied.html
+++ b/laptopguied.html
@@ -1,12 +1,29 @@
-<div style="width: 50%; max-width: 500px; background-color: #ffffff;  padding: 20px; border-radius: 15px; box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1); text-align: center; margin: 20px auto;">
-    <!-- Title -->
-    <h3 style="margin-top: 0; color: #007bff;"></h3>
+<div style="
+    width: 50%;
+    max-width: 500px;
+    background: linear-gradient(135deg, #007bff, #00c6ff);
+    padding: 20px;
+    border-radius: 15px;
+    box-shadow: 0 8px 16px rgba(0, 0, 0, 0.2);
+    text-align: center;
+    margin: 20px auto;">
     
-    <!-- Buttons Inside the Box (Inline Block) -->
-    <div style="margin-top: 20px; text-align: center;">
-        <a href="index2.html" style="text-decoration: none;"><button style="background-color: #007bff; color: white; padding: 10px 20px; margin: 5px; border: none; border-radius: 5px; cursor: pointer; display: inline-block;">Home</button></a>
-    </div>
+    <a href="index2.html" style="text-decoration: none;">
+        <button style="
+            background-color: #ffffff;
+            color: #007bff;
+            padding: 10px 20px;
+            border: 2px solid #007bff;
+            border-radius: 5px;
+            cursor: pointer;
+            font-weight: bold;
+            transition: background-color 0.3s ease, color 0.3s ease;">
+            Home
+        </button>
+    </a>
 </div>
+
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
