--- a/academics.html
+++ b/academics.html
@@ -15,9 +15,16 @@
     <title>ACADEMICS</title>
 </head>
 <body>
+    <p>এককথায় (১-৩০) পড়তে হবে।
+        সংক্ষিপ্ত "২" এবং "১০"নম্বর বাদ।
+        রচনামূলক{
+        (দৃশ্যপটনির্ভর - ১১ এবং ৪ বাদ)
+        (দৃশ্যপটবিহীন - ক, গ এবং ঘ বাদ।)
+        }</p>
     <H1>  <a href="https://drive.google.com/drive/folders/1yCmIPvJa5DoUpVJ2R1iXL49fRidcit0z" style="margin-left: 450px;">click here to see selabush</a> </H1>
     <h1 style="text-align: center;"><a href="https://drive.google.com/drive/folders/1Z2mB4Mtk3y9w6kYXKbE5onp7JlkMgd5C?usp=drive_link"> here is the teturial question</a></h1>
     <img src="school routine.jpg" alt="" style="height: 1000px;  ">
     <img src="mcq.jpg" alt="" style="height: 1000px;">
+    
 </body>
 </html>
