--- a/academics.html
+++ b/academics.html
@@ -23,8 +23,9 @@
         }</p>
     <H1>  <a href="https://drive.google.com/drive/folders/1yCmIPvJa5DoUpVJ2R1iXL49fRidcit0z" style="margin-left: 450px;">click here to see selabush</a> </H1>
     <h1 style="text-align: center;"><a href="https://drive.google.com/drive/folders/1Z2mB4Mtk3y9w6kYXKbE5onp7JlkMgd5C?usp=drive_link"> here is the teturial question</a></h1>
-    <img src="school routine.jpg" alt="" style="height: 1000px;  ">
-    <img src="mcq.jpg" alt="" style="height: 1000px;">
+    <img src="school routine.jpg" alt="" style="height: 190px;  ">
+    <img src="mcq.jpg" alt="" style="height: 190px;">
+    <img src="art drawing.jpg" alt="" style="height: 190px;">
     
 </body>
 </html>
