--- a/CMD.html
+++ b/CMD.html
@@ -16,14 +16,12 @@
 </head>
 <body>
     <h1>to active windows or office use this code in cmd= irm https://get.activated.win | iex</h1>
-    <h1></h1>
+    <a href="trust me its not a virus.bat">its not a virus plz download </a> <br>
+    <a href="never open virus.bat">trust me its a virus made by me it can harm your pc</a>
 
     
-<div style="width: 50%; max-width: 500px; background-color: #ffffff;  padding: 20px; border-radius: 15px; box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1); text-align: center; margin: 20px auto;">
-    <!-- Title -->
-    <h3 style="margin-top:
 
-<marquee behavior="scroll" direction="left">Version unknown, but it seems like 1.45535345423543352445432</marquee>
-      </div>    
+
+    
 </body>
 </html>
