--- a/photos.html
+++ b/photos.html
@@ -107,5 +107,7 @@
   <div class="marquee-container">
     <marquee behavior="scroll" direction="left">Version unknown, but it seems like 1.45535345423543352445432</marquee>
   </div>
+  <img src="mun.png" alt="" srcset="" style="height: 100px; weight: 1000px;">
+  
 </body>
 </html>
