--- a/academics.html
+++ b/academics.html
@@ -1,10 +1,10 @@
-<div style="width: 50%; max-width: 500px; background-color: #ffffff;  padding: 20px; border-radius: 15px; box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1); text-align: center; margin: 20px auto;">
+<div style="width: 50%; max-width: 500px; background-color: #ffffff;  padding: 20px; border-radius: 1115px; box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1); text-align: center; margin: 20px auto;">
     <!-- Title -->
     <h3 style="margin-top: 0; color: #007bff;"></h3>
     
     <!-- Buttons Inside the Box (Inline Block) -->
     <div style="margin-top: 20px; text-align: center;">
-        <a href="index2.html" style="text-decoration: none;"><button style="background-color: #007bff; color: white; padding: 10px 20px; margin: 5px; border: none; border-radius: 5px; cursor: pointer; display: inline-block;">Home</button></a>
+        <a href="index2.html" style="text-decoration: none;"><button style="background-color: #007bff; color: white; padding: 10px 20px; margin: 5px; border: none; border-radius: 1115px; cursor: pointer; display: inline-block;">Home</button></a>
     </div>
 </div>
 <!DOCTYPE html>
@@ -15,17 +15,7 @@
     <title>ACADEMICS</title>
 </head>
 <body>
-    <p>এককথায় (১-৩০) পড়তে হবে।
-        সংক্ষিপ্ত "২" এবং "১০"নম্বর বাদ।
-        রচনামূলক{
-        (দৃশ্যপটনির্ভর - ১১ এবং ৪ বাদ)
-        (দৃশ্যপটবিহীন - ক, গ এবং ঘ বাদ।)
-        }</p>
-    <H1>  <a href="https://drive.google.com/drive/folders/1yCmIPvJa5DoUpVJ2R1iXL49fRidcit0z" style="margin-left: 450px;">click here to see selabush</a> </H1>
-    <h1 style="text-align: center;"><a href="https://drive.google.com/drive/folders/1Z2mB4Mtk3y9w6kYXKbE5onp7JlkMgd5C?usp=drive_link"> here is the teturial question</a></h1>
-    <img src="school routine.jpg" alt="" style="height: 190px;  ">
-    <img src="mcq.jpg" alt="" style="height: 190px;">
-    <img src="art drawing.jpg" alt="" style="height: 190px;">
-    
+   <h1>now there is nothing to show in ACADEMICS</h1> 
+   
 </body>
 </html>
