--- a/academics.html
+++ b/academics.html
@@ -16,6 +16,7 @@
 </head>
 <body>
    <h1>now there is nothing to show in ACADEMICS</h1> 
+   <img src="school routine.png" alt="" srcset="" >
    
 </body>
 </html>
