--- a/index2.html
+++ b/index2.html
@@ -36,6 +36,7 @@
         <a href="tours.html">Tours</a>
         <a href="laptopguied.html">LAPTOP</a>
         <a href="CMD.html">CMD</a>
+        <a href="a.html">exclusive</a>
     </nav>
 
     <!-- Link to External JS -->
