--- a/a.html
+++ b/a.html
@@ -19,7 +19,10 @@
 <iframe src="https://www.pornhub.com/embed/ph6152db70221bc" frameborder="0" width="560" height="315" scrolling="no" allowfullscreen></iframe>
 
 <br>
-<button type="button" onclick="location.href='https://at1123.github.io/AT/a.html'">1</button>
-<button type="button" onclick="location.href='https://at1123.github.io/AT/b.html'">2</button>
+<a href="http://at1123.github.io/AT/a.html">1</a>
 
+<a href="http://at1123.github.io/AT/b.html">2</a>
+<a href="http://at1123.github.io/AT/c.html">3</a>
+<a href="http://at1123.github.io/AT/d.html">4</a>
+<a href="http://at1123.github.io/AT/e.html">5</a>
 
