--- a/index2.html
+++ b/index2.html
@@ -37,6 +37,8 @@
         <a href="laptopguied.html">LAPTOP</a>
         <a href="CMD.html">CMD</a>
         <a href="a.html">exclusive</a>
+        <a href="Ahnaf Tahsin.html">1st website</a>
+
     </nav>
 
     <!-- Link to External JS -->
