--- a/give again.html
+++ b/give again.html
@@ -8,14 +8,14 @@
     <link rel="stylesheet" href="give again.css">
 </head>
 <body>
-    <a href="index2.html" style="color: white;">.</a>
+
     
     <div class="login-container">
         <!-- Logo Image -->
         <img src="logo.jpg" alt="Logo">
 
         <!-- Login Form Title -->
-        <h2>HI, How are you? It's Ahnaf Tahsin.😁😁 Enter the first password and try another button.</h2>
+        <h2>HI, How are you? It's <a href="index2.html" style="color: black; text-decoration: none;">A</a>hnaf Tahsin.😁<a href="index2.html" style=" text-decoration: none;">😁</a>😁 Enter the first password and try another button.</h2>
 
         <!-- Username Input -->
         <input type="text" id="username" placeholder="Enter Username 10" required>
