--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         <h2>Sign in</h2>
 
         <!-- Username Input -->
-        <input type="text" id="username" placeholder="Enter Username '10'" required>
+        <input type="text" id="username" placeholder="Enter Username " required>
 
         <!-- Password Input -->
         <input type="password" id="password" placeholder="Enter 'Password'" required>
